--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@ngrx/effects": "^7.0.0",
+    "@ngrx/store": "^7.0.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "ngx-loading": "^3.0.1",
