--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@ngrx/effects": "^7.0.0",
     "@ngrx/store": "^7.0.0",
+    "@ngrx/store-devtools": "^7.0.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "ngx-loading": "^3.0.1",
