--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@ngrx/effects": "^7.0.0",
+    "@ngrx/entity": "^7.0.0",
+    "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
     "core-js": "^2.5.4",
     "jasmine-marbles": "^0.4.1",
     "lodash": "^4.17.11",
+    "ngrx-store-freeze": "^0.2.4",
     "ngx-loading": "^3.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -36,9 +39,10 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@ngrx/schematics": "^7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
