--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/router-store": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
+    "auth0-js": "^9.9.0",
     "core-js": "^2.5.4",
     "jasmine-marbles": "^0.4.1",
     "lodash": "^4.17.11",
