--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@ng-bootstrap/ng-bootstrap": "^4.2.0",
-    "@ngrx/effects": "^7.4.0",
-    "@ngrx/entity": "^7.4.0",
-    "@ngrx/router-store": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
-    "@ngrx/store-devtools": "^7.4.0",
+    "@ngrx/effects": "^8.0.0",
+    "@ngrx/entity": "^8.0.0",
+    "@ngrx/router-store": "^8.0.0",
+    "@ngrx/store": "^8.0.0",
+    "@ngrx/store-devtools": "^8.0.0",
+    "@swimlane/ngx-charts": "^11.1.0",
     "auth0-js": "^9.10.2",
     "core-js": "^2.5.4",
-    "jasmine-marbles": "^0.5.0",
     "lodash": "^4.17.11",
-    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -43,12 +42,13 @@
     "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@ngrx/schematics": "^7.4.0",
+    "@ngrx/schematics": "^8.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "^0.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
