--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~9.0.4",
     "@angular/core": "~9.0.4",
     "@angular/forms": "~9.0.4",
+    "@angular/localize": "^9.0.4",
     "@angular/platform-browser": "~9.0.4",
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
@@ -25,11 +26,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.23",
     "@fortawesome/free-solid-svg-icons": "^5.11.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
-    "@ngrx/effects": "^8.3.0",
-    "@ngrx/entity": "^8.3.0",
-    "@ngrx/router-store": "^8.3.0",
-    "@ngrx/store": "^8.3.0",
-    "@ngrx/store-devtools": "^8.3.0",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/router-store": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "@swimlane/ngx-charts": "^13.0.2",
     "auth0-js": "^9.10.2",
     "core-js": "^2.5.4",
@@ -43,7 +44,7 @@
     "@angular/cli": "~9.0.4",
     "@angular/compiler-cli": "~9.0.4",
     "@angular/language-service": "~9.0.4",
-    "@ngrx/schematics": "^8.3.0",
+    "@ngrx/schematics": "^8.6.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
