--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
       "parserOptions": {
         "project": [
           "tsconfig.json",
-          "e2e/tsconfig.json"
+          "tsconfig.app.json",
+          "tsconfig.spec.json",
+          "e2e/tsconfig.e2e.json"
         ],
         "createDefaultProgram": true
       },
