--- a/package.json
+++ b/package.json
@@ -12,46 +12,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.1",
-    "@angular/cdk": "^12.2.1",
-    "@angular/common": "~12.2.1",
-    "@angular/compiler": "~12.2.1",
-    "@angular/core": "~12.2.1",
-    "@angular/forms": "~12.2.1",
-    "@angular/localize": "^12.2.1",
-    "@angular/platform-browser": "~12.2.1",
-    "@angular/platform-browser-dynamic": "~12.2.1",
-    "@angular/router": "~12.2.1",
-    "@auth0/auth0-angular": "^1.6.0",
+    "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.0.0",
+    "@angular/common": "~13.0.0",
+    "@angular/compiler": "~13.0.0",
+    "@angular/core": "~13.0.0",
+    "@angular/forms": "~13.0.0",
+    "@angular/localize": "^13.0.0",
+    "@angular/platform-browser": "~13.0.0",
+    "@angular/platform-browser-dynamic": "~13.0.0",
+    "@angular/router": "~13.0.0",
+    "@auth0/auth0-angular": "^1.8.0",
     "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ngrx/effects": "^12.4.0",
-    "@ngrx/entity": "^12.4.0",
-    "@ngrx/router-store": "^12.4.0",
-    "@ngrx/store": "^12.4.0",
-    "@ngrx/store-devtools": "^12.4.0",
-    "@swimlane/ngx-charts": "^18.0.1",
-    "auth0-js": "^9.16.2",
+    "@ngrx/effects": "^13.0.0-beta.0",
+    "@ngrx/entity": "^13.0.0-beta.0",
+    "@ngrx/router-store": "^13.0.0-beta.0",
+    "@ngrx/store": "^13.0.0-beta.0",
+    "@ngrx/store-devtools": "^13.0.0-beta.0",
+    "@swimlane/ngx-charts": "^19.1.0",
+    "auth0-js": "^9.17.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.21",
-    "rxjs": "~7.1.0",
+    "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
+    "@angular-devkit/build-angular": "~13.0.1",
     "@angular-eslint/builder": "12.1.0",
     "@angular-eslint/eslint-plugin": "12.1.0",
     "@angular-eslint/eslint-plugin-template": "12.1.0",
-    "@angular-eslint/schematics": "12.3.1",
+    "@angular-eslint/schematics": "12.6.1",
     "@angular-eslint/template-parser": "12.1.0",
-    "@angular/cli": "^12.2.1",
-    "@angular/compiler-cli": "~12.2.1",
-    "@angular/language-service": "~12.2.1",
-    "@ngrx/schematics": "^12.4.0",
+    "@angular/cli": "^13.0.1",
+    "@angular/compiler-cli": "~13.0.0",
+    "@angular/language-service": "~13.0.0",
+    "@ngrx/schematics": "^13.0.0-beta.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -67,6 +67,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.4.4"
   }
 }
