--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
     "@auth0/auth0-angular": "^1.8.0",
-    "@fortawesome/angular-fontawesome": "^0.10.1",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/effects": "^13.0.2",
     "@ngrx/entity": "^13.0.2",
@@ -36,6 +32,7 @@
     "@ngrx/store-devtools": "^13.0.2",
     "@swimlane/ngx-charts": "^20.0.1",
     "auth0-js": "^9.19.0",
+    "bootstrap-icons": "^1.9.1",
     "core-js": "^2.5.4",
     "lodash": "^4.17.21",
     "rxjs": "~7.4.0",
