Used tsconfig paths to clean up paths a bit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,15 +18,15 @@
       "dom"
     ],
     "paths": {
-      "@app-admin/*": ["app/admin/*"],
-      "@app-admin-paths/*": ["app/admin/paths/*"],
-      "@app-admin-sources/*": ["app/admin/sources/*"],
-      "@app-admin-users/*": ["app/admin/users/*"],
-      "@app-courses/*": ["app/courses/*"],
-      "@app-shared/*": ["app/shared/*"],
-      "@app-shared-modals/*": ["app/shared/modals/*"],
-      "@app-shared-services/*": ["app/shared/services/*"],
-    }
+      "@app/*": ["app/*"],
+      "@admin/*": ["app/admin/*"],
+      "@auth/*": ["app/auth/*"],
+      "@courses/*": ["app/courses/*"],
+      "@shared/*": ["app/shared/*"],
+      "@store/*": ["app/store/*"],
+      "@testing/*": ["testing/*"],
+      "@env/*": ["environments/*"],
+     }
   },
     "angularCompilerOptions": {
       "strictTemplates": true,
