Fixed some test case error after refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,10 @@
       ],
       "@store/*": [
         "./src/app/store/*"
-      ]
+      ],
+      "@testing/*": [
+        "./src/testing/*"
+      ],
     },
     "useDefineForClassFields": false
   },
