Replaced *NgIf and *NgFor with new syntax

--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:browser-esbuild",
           "options": {
             "outputPath": "dist/course-list",
             "index": "src/index.html",
@@ -28,7 +28,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "src/css/cerulean.bootstrap.min.css"
+              "src/css/cerulean.bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [],
             "vendorChunk": true,
@@ -71,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "course-list:build"
+            "buildTarget": "course-list:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "course-list:build:production"
+              "buildTarget": "course-list:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "course-list:build"
+            "buildTarget": "course-list:build"
           }
         },
         "test": {
