--- a/angular.json
+++ b/angular.json
@@ -105,28 +105,14 @@
   },
   "schematics": {
     "@schematics/angular:component": {
-      "type": "component"
-    },
-    "@schematics/angular:directive": {
-      "type": "directive"
+      "inlineStyle": true,
+      "inlineTemplate": true,
+      "skipTests": true,
+      "flat": true
     },
     "@schematics/angular:service": {
-      "type": "service"
-    },
-    "@schematics/angular:guard": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:interceptor": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:module": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:pipe": {
-      "typeSeparator": "."
-    },
-    "@schematics/angular:resolver": {
-      "typeSeparator": "."
+      "skipTests": true,
+      "flat": true
     }
   }
 }
