--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "course-list",
-  "version": "0.0.0",
+  "name": "training-course-tracker",
+  "version": "21.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,6 +9,7 @@
     "test": "ng test",
     "api": "json-server-auth --watch data\\db.json"
   },
+  "packageManager": "pnpm@10.19.0",
   "private": true,
   "dependencies": {
     "@angular/animations": "^21.0.2",
@@ -40,11 +41,8 @@
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.5",
     "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.3"
+    "jsdom": "^27.3.0",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.15"
   }
 }
