--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^21.0.2",
     "@angular/platform-browser-dynamic": "^21.0.2",
     "@angular/router": "^21.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@ngrx/effects": "^20.1.0",
     "@ngrx/entity": "^20.1.0",
     "@ngrx/store": "^20.1.0",
@@ -42,6 +42,7 @@
     "@types/lodash": "^4.17.5",
     "jasmine-core": "~5.1.0",
     "jsdom": "^27.3.0",
+    "prettier": "^3.7.4",
     "typescript": "~5.9.3",
     "vitest": "^4.0.15"
   }
